...
            // LÓGICA DE VISUALIZACIÓN
            when {
                uiState.isLoading && uiState.products.isEmpty() -> {
                    CircularProgressIndicator()
                }
                !uiState.isLoading && uiState.products.isEmpty() -> {
                    Text("No hay productos en el inventario.")
                }
                uiState.products.isNotEmpty() -> {
                    ProductList(
                        products = uiState.products,
                        onDeleteClick = viewModel::requestDelete,
                        onEditClick = viewModel::onRequestAdjustStock
...
